--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,17 @@
   padding: 20px;
   background-color: rgb(251, 58, 58);
 }
-.album-container {
-  padding-left: 10px;
-  padding-right: 10px;
+.navbar {
+  padding: 30px;
+  background-color: rgb(192, 192, 192);
 }
-.albums {
-  padding-left: 5px;
-  padding-right: 5px;
+.navbar a {
+  margin-right: 25px;
 }
-.photos-container {
-  margin-top: 10px;
-  padding: 20px;
+.navbar a.active {
+  font-weight: bold;
 }
-.redBorders {
-  border: 1px solid red;
-}
-.title-row {
-  margin-top: 10px;
-}
-.title {
-  margin-right: 5px;
-}
-.thumb {
-  padding: 10px;
+.page-content {
+  margin-left: 15px;
+  margin-right: 15px;
 }
