--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,65 @@
   font-weight: bold;
 }
 .page-content {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 15px;
+}
+.modal {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+.d-none {
+  display: none;
+}
+.btn {
+  color: #fff;
+  background-color: #009fe3;
+  border-color: #009fe3;
+  display: inline-block;
+  font-weight: bold;
+  color: #111;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  border: 1px solid;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.filters {
+  display: flex;
+  justify-content: space-between;
+}
+.dialogContent {
+  background-color: white;
+  width: 550px;
+  display: flex;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 15px;
+}
+.buttons {
+  margin-top: 15px;
+  float: right;
+}
+.row {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+form {
+  width: 100%;
+}
+table {
+  width: 100%;
+  margin-top: 20px;
 }
