--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,14 @@ table {
   width: 100%;
   margin-top: 20px;
 }
+.counter-buttons {
+  margin-top: 15px;
+}
+.counter-buttons button {
+  padding: 5px;
+  margin-right: 7px;
+}
+
+.justify-start {
+  justify-content: start;
+}
